add quest data urls
