# server/quest_handlers.go
@@ -1,6 +1,7 @@
 package server
 
 import (
+	"fmt"
 	"github.com/Sovianum/arquest-server/common"
 	"github.com/gin-gonic/gin"
 	"net/http"
@@ -11,6 +12,9 @@ func (env *Env) GetAllQuests(c *gin.Context) {
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, common.GetErrResponse(err))
 		return
+	}
+	for i := range quests {
+		quests[i].DataPath = getQuestDataUrl(env.conf.Logic.QuestDataTemplate, quests[i].ID)
 	}
 	c.JSON(http.StatusOK, common.GetDataResponse(quests))
 }
@@ -23,4 +27,8 @@ func (env *Env) GetFinishedQuests(c *gin.Context) {
 		return
 	}
 	c.JSON(http.StatusOK, common.GetDataResponse(quests))
+}
+
+func getQuestDataUrl(template string, questID int) string {
+	return fmt.Sprintf(template, questID)
 }
